[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/characters/EnemyManager.gd" type="Script" id=1]

[node name="EnemyManager" type="Spatial"]
script = ExtResource( 1 )

[node name="EnemySpawnTimer" type="Timer" parent="."]

[node name="EnemySpawnPositions" type="Spatial" parent="."]

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
